# LiberNovusBot

./: .cursorrules  .dockerignore  .env.example  .env.local.example  .env.test.example  Dockerfile  LICENSE  Makefile  NOTICE  README.md  TASKS.md  docker-compose.yaml  main.py  prompt.txt  pyproject.toml  settings.py
.cursor/rules/: ai-integration.mdc  ai-orchestrator.mdc  architecture.mdc  backend.mdc  database.mdc  mini-app.mdc  prompt-engineering.mdc  psychological-safety.mdc  security.mdc  session-lifecycle.mdc  telegram-bot.mdc  telegram-mini-app.mdc  testing.mdc
admin-ui/: package.json
admin-ui/app/: globals.css  layout.tsx
admin-ui/components/: PipelineSummary.tsx  PolicyTraceCard.tsx  RawPayload.tsx  SessionList.tsx  StatusBadge.tsx  TimelineEvent.tsx
bot/: config.py  main.py
bot/clients/: backend_client.py
bot/handlers/: dreams.py
cursor/rules/: ai-integration.mdc  (+1 more)
db/: __init__.py
migrations/: env.py
routers/: admin.py  analysis_jobs.py  dreams.py  journal.py  players.py  session_analysis.py  sessions.py  telegram_webhook.py
scripts/: cleanup_legacy_sessions.py
services/: analysis_continuation_service.py  analysis_contract.py  analysis_facade.py  analysis_input_service.py  analysis_orchestrator.py  analysis_policy.py  analysis_policy_service.py  analysis_prepare_result.py  analysis_snapshot_service.py  analysis_state_machine_service.py  analysis_state_machine_types.py  analysis_thread_service.py  dream_intake.py  dream_service.py  jungian_prompt_builder.py  prompt_compiler.py  prompt_contract.py  prompt_validation.py  response_parser.py  session_analysis_service.py  session_service.py  session_summary_service.py
tests/: conftest.py
utils/: admin_auth.py  auth.py  journal_auth.py
(+201 files in other folders)
